--- a/package.json
+++ b/package.json
@@ -28,14 +28,21 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
+    "@tailwindcss/vite": "^4.1.10",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "express": "^4.17.2",
     "express-jwt": "^7.7.5",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^2.1.5",
     "knex": "^2.5.1",
+    "lucide-react": "^0.523.0",
     "sqlite3": "^5.1.6",
-    "superagent": "^8.1.2"
+    "superagent": "^8.1.2",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@devacademy/eslint-config": "^1.10.1",
@@ -71,7 +78,7 @@
     "react-router-dom": "^6.11.2",
     "sass": "^1.50.1",
     "supertest": "^6.3.4",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.17",
     "tsx": "^3.12.7",
     "typescript": "^5.3.3",
     "vite": "^5.0.0",
