--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@auth0/auth0-react": "^2.2.4",
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@tailwindcss/vite": "^4.1.10",
+    "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "express": "^4.17.2",
@@ -39,6 +40,7 @@
     "jwks-rsa": "^2.1.5",
     "knex": "^2.5.1",
     "lucide-react": "^0.523.0",
+    "react-chartjs-2": "^5.3.0",
     "sqlite3": "^5.1.6",
     "superagent": "^8.1.2",
     "tailwind-merge": "^3.3.1",
