--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "clsx": "^2.1.1",
     "express": "^4.17.2",
     "express-jwt": "^7.7.5",
+    "gsap": "^3.13.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^2.1.5",
