--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dev:server": "tsx watch server/index.ts",
     "build": "run-s build:client build:server",
     "build:client": "vite build",
-    "build:server": "esbuild --packages=external --platform=node --format=esm --outfile=dist/server.js --bundle server/index.ts",
+"build:server": "esbuild --packages=external --platform=node --format=esm --outfile=dist/index.js --bundle index.ts && esbuild --packages=external --platform=node --format=esm --outfile=dist/server.js --bundle server/index.ts",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
     "knex": "knex --knexfile ./server/db/knexfile.js",
     "format": "prettier -w '**/*.{js,jsx,ts,tsx}'",
