--- a/package.json
+++ b/package.json
@@ -8,20 +8,19 @@
     "fullstack"
   ],
   "scripts": {
-    "test": "vitest",
-    "start": "node dist/index.js",
-    "dev": "run-p dev:client dev:server",
-    "dev:client": "vite",
-    "dev:server": "tsx watch server/index.ts",
-    "build": "run-s build:client build:server",
-    "build:client": "vite build",
-"build:server": "esbuild --packages=external --platform=node --format=esm --outfile=dist/index.js --bundle index.ts && esbuild --packages=external --platform=node --format=esm --outfile=dist/server.js --bundle server/index.ts",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
-    "knex": "knex --knexfile ./server/db/knexfile.js",
-    "format": "prettier -w '**/*.{js,jsx,ts,tsx}'",
-    "render:build": "npm install && npm run build && npm prune --omit=dev",
-    "render:start": "node dist/server.js"
-  },
+  "test": "vitest",
+  "dev": "run-p dev:client dev:server",
+  "dev:client": "vite",
+  "dev:server": "tsx watch server/index.ts",
+  "build": "esbuild --packages=external --platform=node --format=esm --outfile=dist/index.js --bundle index.ts",
+  "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
+  "knex": "knex --knexfile ./server/db/knexfile.js",
+  "format": "prettier -w '**/*.{js,jsx,ts,tsx}'",
+  "render:build": "npm install && npm run build && npm prune --omit=dev",
+  "start": "node dist/index.js",
+  "render:start": "node dist/index.js"
+}
+,
   "eslintConfig": {
     "extends": "@devacademy/eslint-config/react",
     "ignorePatterns": [
