--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dev": "run-p dev:client dev:server",
   "dev:client": "vite",
   "dev:server": "tsx watch server/index.ts",
-  "build": "esbuild --packages=external --platform=node --format=esm --outfile=dist/index.js --bundle index.ts",
+"build": "esbuild --platform=node --format=esm --outfile=dist/index.js --bundle index.ts",
   "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
   "knex": "knex --knexfile ./server/db/knexfile.js",
   "format": "prettier -w '**/*.{js,jsx,ts,tsx}'",
